
python = import('python').find_installation('python3', required : true)

gen_grammar_tables = [python, files('generate_grammar_tables.py')]
gen_language_headers = [python, files('generate_language_headers.py')]
gen_registry_tables = [python, files('generate_registry_tables.py')]
update_build_version = [python, files('update_build_version.py')]
